[CANBus-Triple-Dll] - Added FakeCBT - Modified CanBusMazda3 and FakeCBT to be compatible with async calls - Update Newtonsoft.Json to version 7.0.1 - Remove unused code

--- a/CANBus-Triple-Dll.csproj
+++ b/CANBus-Triple-Dll.csproj
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -47,8 +47,9 @@
     <Compile Include="CBTController.cs" />
     <Compile Include="CBTCommand.cs" />
     <Compile Include="CBTSerial.cs" />
-    <Compile Include="CBTSerialOld.cs" />
     <Compile Include="CBTSettings.cs" />
+    <Compile Include="CanMessage.cs" />
+    <Compile Include="FakeCBT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
